--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AI Background Remover</title>
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -34,6 +34,6 @@
   © <span id="year"></span> Background Remover
 </footer>
 
-<script src="/static/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
